--- a/apps/microservice-01/package.json
+++ b/apps/microservice-01/package.json
@@ -30,7 +30,9 @@
     "@nestjs/platform-express": "^8.0.0",
     "dotenv": "^10.0.0",
     "express-jwt": "^6.1.0",
+    "express-jwt-permissions": "^1.3.6",
     "jwks-rsa": "^2.0.5",
+    "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
